--- a/login.html
+++ b/login.html
@@ -34,7 +34,7 @@
   <body class="login">
     <div class="container">
       <div class="text-center">
-        <img src="web/img/metlife.png" alt="Metis Logo">
+        <img src="web/img/logo.png" alt="Metis Logo">
       </div>
       <div class="tab-content">
         <div id="login" class="tab-pane active">
