--- a/login.html
+++ b/login.html
@@ -34,11 +34,11 @@
   <body class="login">
     <div class="container">
       <div class="text-center">
-        <img src="web/img/logo.png" alt="Metis Logo">
+        <img src="web/img/logo.png" alt="Logo" width="150px" height="40px">
       </div>
       <div class="tab-content">
         <div id="login" class="tab-pane active">
-          <form action="admDashboard.html" class="form-signin">
+          <form action="index.html" class="form-signin">
             <p class="text-muted text-center">
               Enter your username and password
             </p>
@@ -48,7 +48,7 @@
           </form>
         </div>
         <div id="forgot" class="tab-pane">
-          <form action="admDashboard.html" class="form-signin">
+          <form action="index.html" class="form-signin">
             <p class="text-muted text-center">Enter your valid e-mail</p>
             <input type="email" placeholder="mail@domain.com" required="required" class="form-control">
             <br>
@@ -56,7 +56,7 @@
           </form>
         </div>
         <div id="signup" class="tab-pane">
-          <form action="admDashboard.html" class="form-signin">
+          <form action="index.html" class="form-signin">
             <input type="text" placeholder="username" class="form-control">
             <input type="email" placeholder="mail@domain.com" class="form-control">
             <input type="password" placeholder="password" class="form-control">
